#9 changed stringdictionary to map

--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
@@ -2750,15 +2750,15 @@ items:
   summary: "\nChecks that entity is ready for saving.\n"
   remarks: 
   syntax: 
-    content: StringDictionary ValidateAppointmentEntity(NSAppointmentEntity appointmentEntity)
+    content: Map ValidateAppointmentEntity(NSAppointmentEntity appointmentEntity)
     parameters:
     - id: appointmentEntity
       type: CRMScript.NetServer.NSAppointmentEntity
       description:
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSAppointmentAgent agent;\nNSAppointmentEntity appointmentEntity;\nStringDictionary res = agent.ValidateAppointmentEntity(appointmentEntity);</code></pre>\n"
+  - "\n<pre><code>NSAppointmentAgent agent;\nNSAppointmentEntity appointmentEntity;\nMap res = agent.ValidateAppointmentEntity(appointmentEntity);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointmentAgent.ValidateDays()
   commentId: M:CRMScript.NetServer.NSAppointmentAgent.ValidateDays()
   id: 'ValidateDays()'
@@ -3067,12 +3067,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.NetServer.NSRecurrenceDate[]
   isExternal: true
   name: NSRecurrenceDate[]
