--- a/docs/api-reference/CRMScript.NetServer.NSDatabaseTableAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDatabaseTableAgent.yml
@@ -110,7 +110,7 @@ items:
   summary: "\nInsert a row into a table\n"
   remarks: 
   syntax: 
-    content: Integer InsertRow(String tableName, StringDictionary values)
+    content: Integer InsertRow(String tableName, Map values)
     parameters:
     - id: tableName
       type: CRMScript.Global.String
@@ -118,7 +118,7 @@ items:
     return:
       type: CRMScript.Global.Integer
   example: 
-  - "\n<pre><code>NSDatabaseTableAgent agent;\nString tableName;\nStringDictionary values;\nInteger res = agent.InsertRow(tableName, values);</code></pre>\n"
+  - "\n<pre><code>NSDatabaseTableAgent agent;\nString tableName;\nMap values;\nInteger res = agent.InsertRow(tableName, values);</code></pre>\n"
 - uid: CRMScript.NetServer.NSDatabaseTableAgent.#ctor
   commentId: M:CRMScript.NetServer.NSDatabaseTableAgent.#ctor
   id: '#ctor'
@@ -195,7 +195,7 @@ items:
   summary: "\nUpdate a row in a table\n"
   remarks: 
   syntax: 
-    content: Void UpdateRow(String tableName, Integer id, StringDictionary values)
+    content: Void UpdateRow(String tableName, Integer id, Map values)
     parameters:
     - id: tableName
       type: CRMScript.Global.String
