--- a/docs/api-reference/CRMScript.NetServer.NSErpConnection.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSErpConnection.yml
@@ -104,15 +104,15 @@ items:
   nameWithType: NSErpConnection.GetConfigFields()
   fullName: CRMScript.NetServer.NSErpConnection.GetConfigFields()
   type: Method
-  summary: "\nThe config fields needed to establish a connection to the connector<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSErpConnection thing;\nStringDictionary configFields = thing.GetConfigFields();</code></pre>\n"
+  summary: "\nThe config fields needed to establish a connection to the connector<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSErpConnection thing;\nMap configFields = thing.GetConfigFields();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetConfigFields()
+    content: Map GetConfigFields()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSErpConnection thing;\nStringDictionary configFields = thing.GetConfigFields();</code></pre>\n"
+  - "\n<pre><code>NSErpConnection thing;\nMap configFields = thing.GetConfigFields();</code></pre>\n"
 - uid: CRMScript.NetServer.NSErpConnection.GetConnectionId()
   commentId: M:CRMScript.NetServer.NSErpConnection.GetConnectionId()
   id: 'GetConnectionId()'
@@ -353,10 +353,10 @@ items:
   summary: "\nThe config fields needed to establish a connection to the connector\n"
   remarks: 
   syntax: 
-    content: Void SetConfigFields(StringDictionary configFields)
+    content: Void SetConfigFields(Map configFields)
     parameters:
   example: 
-  - "\n<pre><code>NSErpConnection thing;\nStringDictionary configFields;\nthing.SetConfigFields(configFields);</code></pre>\n"
+  - "\n<pre><code>NSErpConnection thing;\nMap configFields;\nthing.SetConfigFields(configFields);</code></pre>\n"
 - uid: CRMScript.NetServer.NSErpConnection.SetConnectionId(String)
   commentId: M:CRMScript.NetServer.NSErpConnection.SetConnectionId(String)
   id: 'SetConnectionId(String)'
@@ -550,12 +550,12 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
