--- a/docs/api-reference/CRMScript.NetServer.NSEventData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEventData.yml
@@ -77,15 +77,15 @@ items:
   nameWithType: NSEventData.GetInputValues()
   fullName: CRMScript.NetServer.NSEventData.GetInputValues()
   type: Method
-  summary: "\nEnvironment values sent to the event handler<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSEventData thing;\nStringDictionary inputValues = thing.GetInputValues();</code></pre>\n"
+  summary: "\nEnvironment values sent to the event handler<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSEventData thing;\nMap inputValues = thing.GetInputValues();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetInputValues()
+    content: Map GetInputValues()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSEventData thing;\nStringDictionary inputValues = thing.GetInputValues();</code></pre>\n"
+  - "\n<pre><code>NSEventData thing;\nMap inputValues = thing.GetInputValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.GetMessage()
   commentId: M:CRMScript.NetServer.NSEventData.GetMessage()
   id: 'GetMessage()'
@@ -134,15 +134,15 @@ items:
   nameWithType: NSEventData.GetOutputValues()
   fullName: CRMScript.NetServer.NSEventData.GetOutputValues()
   type: Method
-  summary: "\nValues sent back to the environment from the event handler<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSEventData thing;\nStringDictionary outputValues = thing.GetOutputValues();</code></pre>\n"
+  summary: "\nValues sent back to the environment from the event handler<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSEventData thing;\nMap outputValues = thing.GetOutputValues();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetOutputValues()
+    content: Map GetOutputValues()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSEventData thing;\nStringDictionary outputValues = thing.GetOutputValues();</code></pre>\n"
+  - "\n<pre><code>NSEventData thing;\nMap outputValues = thing.GetOutputValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.GetStateValues()
   commentId: M:CRMScript.NetServer.NSEventData.GetStateValues()
   id: 'GetStateValues()'
@@ -153,15 +153,15 @@ items:
   nameWithType: NSEventData.GetStateValues()
   fullName: CRMScript.NetServer.NSEventData.GetStateValues()
   type: Method
-  summary: "\nValues kept between event handlers<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSEventData thing;\nStringDictionary stateValues = thing.GetStateValues();</code></pre>\n"
+  summary: "\nValues kept between event handlers<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSEventData thing;\nMap stateValues = thing.GetStateValues();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetStateValues()
+    content: Map GetStateValues()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSEventData thing;\nStringDictionary stateValues = thing.GetStateValues();</code></pre>\n"
+  - "\n<pre><code>NSEventData thing;\nMap stateValues = thing.GetStateValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.GetType()
   commentId: M:CRMScript.NetServer.NSEventData.GetType()
   id: 'GetType()'
@@ -249,10 +249,10 @@ items:
   summary: "\nEnvironment values sent to the event handler\n"
   remarks: 
   syntax: 
-    content: Void SetInputValues(StringDictionary inputValues)
+    content: Void SetInputValues(Map inputValues)
     parameters:
   example: 
-  - "\n<pre><code>NSEventData thing;\nStringDictionary inputValues;\nthing.SetInputValues(inputValues);</code></pre>\n"
+  - "\n<pre><code>NSEventData thing;\nMap inputValues;\nthing.SetInputValues(inputValues);</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.SetMessage(String)
   commentId: M:CRMScript.NetServer.NSEventData.SetMessage(String)
   id: 'SetMessage(String)'
@@ -306,10 +306,10 @@ items:
   summary: "\nValues sent back to the environment from the event handler\n"
   remarks: 
   syntax: 
-    content: Void SetOutputValues(StringDictionary outputValues)
+    content: Void SetOutputValues(Map outputValues)
     parameters:
   example: 
-  - "\n<pre><code>NSEventData thing;\nStringDictionary outputValues;\nthing.SetOutputValues(outputValues);</code></pre>\n"
+  - "\n<pre><code>NSEventData thing;\nMap outputValues;\nthing.SetOutputValues(outputValues);</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.SetStateValues()
   commentId: M:CRMScript.NetServer.NSEventData.SetStateValues()
   id: 'SetStateValues()'
@@ -323,10 +323,10 @@ items:
   summary: "\nValues kept between event handlers\n"
   remarks: 
   syntax: 
-    content: Void SetStateValues(StringDictionary stateValues)
+    content: Void SetStateValues(Map stateValues)
     parameters:
   example: 
-  - "\n<pre><code>NSEventData thing;\nStringDictionary stateValues;\nthing.SetStateValues(stateValues);</code></pre>\n"
+  - "\n<pre><code>NSEventData thing;\nMap stateValues;\nthing.SetStateValues(stateValues);</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.SetType(Integer)
   commentId: M:CRMScript.NetServer.NSEventData.SetType(Integer)
   id: 'SetType(Integer)'
@@ -366,12 +366,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
