--- a/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
@@ -274,7 +274,7 @@ NetServer calculates default values (for example, Country) on the entity, which 
   summary: "\nGet a list of foreignkeys ('app.device.key') and their values ('123') that belong to the specified entity.\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetAllForeignKeysOnEntity(String entityType, Integer entityId)
+    content: Map GetAllForeignKeysOnEntity(String entityType, Integer entityId)
     parameters:
     - id: entityType
       type: CRMScript.Global.String
@@ -283,9 +283,9 @@ NetServer calculates default values (for example, Country) on the entity, which 
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSForeignSystemAgent agent;\nString entityType;\nInteger entityId;\nStringDictionary res = agent.GetAllForeignKeysOnEntity(entityType, entityId);</code></pre>\n"
+  - "\n<pre><code>NSForeignSystemAgent agent;\nString entityType;\nInteger entityId;\nMap res = agent.GetAllForeignKeysOnEntity(entityType, entityId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSForeignSystemAgent.GetAppByName(String)
   commentId: M:CRMScript.NetServer.NSForeignSystemAgent.GetAppByName(String)
   id: 'GetAppByName(String)'
@@ -943,12 +943,12 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.NetServer.NSForeignDevice[]
   isExternal: true
   name: NSForeignDevice[]
