--- a/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMessagingAgent.yml
@@ -128,7 +128,7 @@ items:
   summary: "\nSend an array of messages using given config\n"
   remarks: 
   syntax: 
-    content: NSMessageDeliveryStatus[] SendMessagesWithConfig(String plugin, NSOutgoingMessage[] outgoingMessages, StringDictionary config)
+    content: NSMessageDeliveryStatus[] SendMessagesWithConfig(String plugin, NSOutgoingMessage[] outgoingMessages, Map config)
     parameters:
     - id: plugin
       type: CRMScript.Global.String
@@ -136,7 +136,7 @@ items:
     return:
       type: CRMScript.NetServer.NSMessageDeliveryStatus[]
   example: 
-  - "\n<pre><code>NSMessagingAgent agent;\nString plugin;\nNSOutgoingMessage[] outgoingMessages;\nStringDictionary config;\nNSMessageDeliveryStatus[] res = agent.SendMessagesWithConfig(plugin, outgoingMessages, config);</code></pre>\n"
+  - "\n<pre><code>NSMessagingAgent agent;\nString plugin;\nNSOutgoingMessage[] outgoingMessages;\nMap config;\nNSMessageDeliveryStatus[] res = agent.SendMessagesWithConfig(plugin, outgoingMessages, config);</code></pre>\n"
 - uid: CRMScript.NetServer.NSMessagingAgent.SetDeliveryStatus(String,String,Integer,String)
   commentId: M:CRMScript.NetServer.NSMessagingAgent.SetDeliveryStatus(String,String,Integer,String)
   id: 'SetDeliveryStatus(String,String,Integer,String)'
