--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -1222,15 +1222,15 @@ items:
   summary: "\nCheck that entity is ready for saving, return error messages by field.\n"
   remarks: 
   syntax: 
-    content: StringDictionary ValidatePersonEntity(NSPersonEntity personEntity)
+    content: Map ValidatePersonEntity(NSPersonEntity personEntity)
     parameters:
     - id: personEntity
       type: CRMScript.NetServer.NSPersonEntity
       description: 
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSPersonAgent agent;\nNSPersonEntity personEntity;\nStringDictionary res = agent.ValidatePersonEntity(personEntity);</code></pre>\n"
+  - "\n<pre><code>NSPersonAgent agent;\nNSPersonEntity personEntity;\nMap res = agent.ValidatePersonEntity(personEntity);</code></pre>\n"
 references:
 - uid: CRMScript.NetServer.NSPersonAgent
   commentId: T:CRMScript.NetServer.NSPersonAgent
@@ -1404,12 +1404,12 @@ references:
   name: NSResolvedPerson
   nameWithType: NSResolvedPerson
   fullName: CRMScript.NetServer.NSResolvedPerson
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.NetServer.ContactSourceType
   commentId: T:CRMScript.NetServer.ContactSourceType
   isExternal: true
