--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -81,15 +81,15 @@ items:
   nameWithType: NSPocketNotificationMessage.GetExtraValues()
   fullName: CRMScript.NetServer.NSPocketNotificationMessage.GetExtraValues()
   type: Method
-  summary: "\nAdditional key/value properties to include in the message<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSPocketNotificationMessage thing;\nStringDictionary extraValues = thing.GetExtraValues();</code></pre>\n"
+  summary: "\nAdditional key/value properties to include in the message<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSPocketNotificationMessage thing;\nMap extraValues = thing.GetExtraValues();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetExtraValues()
+    content: Map GetExtraValues()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSPocketNotificationMessage thing;\nStringDictionary extraValues = thing.GetExtraValues();</code></pre>\n"
+  - "\n<pre><code>NSPocketNotificationMessage thing;\nMap extraValues = thing.GetExtraValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketNotificationMessage.GetMessage()
   commentId: M:CRMScript.NetServer.NSPocketNotificationMessage.GetMessage()
   id: 'GetMessage()'
@@ -285,10 +285,10 @@ items:
   summary: "\nAdditional key/value properties to include in the message\n"
   remarks: 
   syntax: 
-    content: Void SetExtraValues(StringDictionary extraValues)
+    content: Void SetExtraValues(Map extraValues)
     parameters:
   example: 
-  - "\n<pre><code>NSPocketNotificationMessage thing;\nStringDictionary extraValues;\nthing.SetExtraValues(extraValues);</code></pre>\n"
+  - "\n<pre><code>NSPocketNotificationMessage thing;\nMap extraValues;\nthing.SetExtraValues(extraValues);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketNotificationMessage.SetMessage(String)
   commentId: M:CRMScript.NetServer.NSPocketNotificationMessage.SetMessage(String)
   id: 'SetMessage(String)'
@@ -448,12 +448,12 @@ references:
   name: TimeSpan
   nameWithType: TimeSpan
   fullName: CRMScript.Global.TimeSpan
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
