--- a/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
@@ -1133,15 +1133,15 @@ NetServer calculates default values (for example, Country) on the entity, which 
   summary: "\nCheck that entity is ready for saving, return error messages by field.\n"
   remarks: 
   syntax: 
-    content: StringDictionary ValidateProjectEntity(ProjectEntity projectEntity)
+    content: Map ValidateProjectEntity(ProjectEntity projectEntity)
     parameters:
     - id: projectEntity
       type: CRMScript.Native.ProjectEntity
       description: 
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSProjectAgent agent;\nProjectEntity projectEntity;\nStringDictionary res = agent.ValidateProjectEntity(projectEntity);</code></pre>\n"
+  - "\n<pre><code>NSProjectAgent agent;\nProjectEntity projectEntity;\nMap res = agent.ValidateProjectEntity(projectEntity);</code></pre>\n"
 references:
 - uid: CRMScript.NetServer.NSProjectAgent
   commentId: T:CRMScript.NetServer.NSProjectAgent
@@ -1341,12 +1341,12 @@ references:
   name: ProjectEntity
   nameWithType: ProjectEntity
   fullName: CRMScript.Native.ProjectEntity
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
