--- a/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
@@ -892,12 +892,12 @@ NetServer calculates default values (for example, Country) on the entity, which 
   summary: "\nCheck that entity is ready for saving, return error messages by field.\n"
   remarks: 
   syntax: 
-    content: StringDictionary ValidateSaleEntity(NSSaleEntity saleEntity)
+    content: Map ValidateSaleEntity(NSSaleEntity saleEntity)
     parameters:
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSSaleAgent agent;\nNSSaleEntity saleEntity;\nStringDictionary res = agent.ValidateSaleEntity(saleEntity);</code></pre>\n"
+  - "\n<pre><code>NSSaleAgent agent;\nNSSaleEntity saleEntity;\nMap res = agent.ValidateSaleEntity(saleEntity);</code></pre>\n"
 references:
 - uid: CRMScript.NetServer.NSSaleAgent
   commentId: T:CRMScript.NetServer.NSSaleAgent
@@ -1019,12 +1019,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
