--- a/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
@@ -69,15 +69,15 @@ items:
   nameWithType: NSSmsConfig.GetNsPluginConfig()
   fullName: CRMScript.NetServer.NSSmsConfig.GetNsPluginConfig()
   type: Method
-  summary: "\nConfiguration settings provided by the SMS provider. Typically contains newline-delimited settings such as username and password.<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSSmsConfig thing;\nStringDictionary nsPluginConfig = thing.GetNsPluginConfig();</code></pre>\n"
+  summary: "\nConfiguration settings provided by the SMS provider. Typically contains newline-delimited settings such as username and password.<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSSmsConfig thing;\nMap nsPluginConfig = thing.GetNsPluginConfig();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetNsPluginConfig()
+    content: Map GetNsPluginConfig()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSSmsConfig thing;\nStringDictionary nsPluginConfig = thing.GetNsPluginConfig();</code></pre>\n"
+  - "\n<pre><code>NSSmsConfig thing;\nMap nsPluginConfig = thing.GetNsPluginConfig();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSmsConfig.GetNsPluginSender()
   commentId: M:CRMScript.NetServer.NSSmsConfig.GetNsPluginSender()
   id: 'GetNsPluginSender()'
@@ -165,10 +165,10 @@ items:
   summary: "\nConfiguration settings provided by the SMS provider. Typically contains newline-delimited settings such as username and password.\n"
   remarks: 
   syntax: 
-    content: Void SetNsPluginConfig(StringDictionary nsPluginConfig)
+    content: Void SetNsPluginConfig(Map nsPluginConfig)
     parameters:
   example: 
-  - "\n<pre><code>NSSmsConfig thing;\nStringDictionary nsPluginConfig;\nthing.SetNsPluginConfig(nsPluginConfig);</code></pre>\n"
+  - "\n<pre><code>NSSmsConfig thing;\nMap nsPluginConfig;\nthing.SetNsPluginConfig(nsPluginConfig);</code></pre>\n"
 - uid: CRMScript.NetServer.NSSmsConfig.SetNsPluginSender(String)
   commentId: M:CRMScript.NetServer.NSSmsConfig.SetNsPluginSender(String)
   id: 'SetNsPluginSender(String)'
@@ -202,12 +202,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
