--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -291,15 +291,15 @@ items:
   nameWithType: NSBatchTaskInfo.GetParameterObject()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetParameterObject()
   type: Method
-  summary: "\nParameterObject will be serialized to a binary blob and saved in the BinaryObject table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSBatchTaskInfo thing;\nStringDictionary parameterObject = thing.GetParameterObject();</code></pre>\n"
+  summary: "\nParameterObject will be serialized to a binary blob and saved in the BinaryObject table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSBatchTaskInfo thing;\nMap parameterObject = thing.GetParameterObject();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetParameterObject()
+    content: Map GetParameterObject()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSBatchTaskInfo thing;\nStringDictionary parameterObject = thing.GetParameterObject();</code></pre>\n"
+  - "\n<pre><code>NSBatchTaskInfo thing;\nMap parameterObject = thing.GetParameterObject();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.GetProgressDescription()
   commentId: M:CRMScript.NetServer.NSBatchTaskInfo.GetProgressDescription()
   id: 'GetProgressDescription()'
@@ -692,13 +692,13 @@ items:
   nameWithType: NSBatchTaskInfo.SetParameterObject()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject()
   type: Method
-  summary: "\nCRMScript method in the NSBatchTaskInfo class that serializes a StringDictionary to a binary blob and saves it in the BinaryObject tableParameterObject will be serialized to a binary blob and saved in the<code>BinaryObject</code>table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.<p></p>\n<code>SetParameterObject(StringDictionary parameterObject)</code>\n"
+  summary: "\nCRMScript method in the NSBatchTaskInfo class that serializes a Map to a binary blob and saves it in the BinaryObject tableParameterObject will be serialized to a binary blob and saved in the<code>BinaryObject</code>table. The link to the BinaryObject will be set using DetailsTable and DetailsRecord.<p></p>\n<code>SetParameterObject(Map parameterObject)</code>\n"
   remarks: 
   syntax: 
     content: Void SetParameterObject()
     parameters: []
   example: 
-  - "\n<pre><code>NSBatchTaskInfo thing;\nStringDictionary parameterObject;\nthing.SetParameterObject(parameterObject);</code></pre>\n"
+  - "\n<pre><code>NSBatchTaskInfo thing;\nMap parameterObject;\nthing.SetParameterObject(parameterObject);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.SetProgressDescription(String)
   commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetProgressDescription(String)
   id: 'SetProgressDescription(String)'
@@ -870,12 +870,12 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.NetServer.BatchTaskState
   commentId: T:CRMScript.NetServer.BatchTaskState
   isExternal: true
