--- a/docs/api-reference/CRMScript.NetServer.NSTableRecord.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTableRecord.yml
@@ -25,15 +25,15 @@ items:
   nameWithType: NSTableRecord.GetValues()
   fullName: CRMScript.NetServer.NSTableRecord.GetValues()
   type: Method
-  summary: "\nValues for the row, where the first string is the column name (e.g. x_number), and the second string is the value formatted as a DB-value, e.g. [I:42]<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSTableRecord thing;\nStringDictionary values = thing.GetValues();</code></pre>\n"
+  summary: "\nValues for the row, where the first string is the column name (e.g. x_number), and the second string is the value formatted as a DB-value, e.g. [I:42]<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSTableRecord thing;\nMap values = thing.GetValues();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetValues()
+    content: Map GetValues()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSTableRecord thing;\nStringDictionary values = thing.GetValues();</code></pre>\n"
+  - "\n<pre><code>NSTableRecord thing;\nMap values = thing.GetValues();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTableRecord.#ctor
   commentId: M:CRMScript.NetServer.NSTableRecord.#ctor
   id: '#ctor'
@@ -62,10 +62,10 @@ items:
   summary: "\nValues for the row, where the first string is the column name (e.g. x_number), and the second string is the value formatted as a DB-value, e.g. [I:42]\n"
   remarks: 
   syntax: 
-    content: Void SetValues(StringDictionary values)
+    content: Void SetValues(Map values)
     parameters:
   example: 
-  - "\n<pre><code>NSTableRecord thing;\nStringDictionary values;\nthing.SetValues(values);</code></pre>\n"
+  - "\n<pre><code>NSTableRecord thing;\nMap values;\nthing.SetValues(values);</code></pre>\n"
 references:
 - uid: CRMScript.NetServer.NSTableRecord
   commentId: T:CRMScript.NetServer.NSTableRecord
@@ -73,12 +73,12 @@ references:
   name: NSTableRecord
   nameWithType: NSTableRecord
   fullName: CRMScript.NetServer.NSTableRecord
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
