--- a/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
@@ -68,15 +68,15 @@ items:
   nameWithType: NSWebhook.GetHeaders()
   fullName: CRMScript.NetServer.NSWebhook.GetHeaders()
   type: Method
-  summary: "\nCustom HTTP Headers to add to webhook requests.<p></p>\n<strong>Returns:</strong>StringDictionary<p></p>\n<pre><code>NSWebhook thing;\nStringDictionary headers = thing.GetHeaders();</code></pre>\n"
+  summary: "\nCustom HTTP Headers to add to webhook requests.<p></p>\n<strong>Returns:</strong>Map<p></p>\n<pre><code>NSWebhook thing;\nMap headers = thing.GetHeaders();</code></pre>\n"
   remarks: 
   syntax: 
-    content: StringDictionary GetHeaders()
+    content: Map GetHeaders()
     parameters: []
     return:
-      type: CRMScript.Global.StringDictionary
+      type: CRMScript.Global.Map
   example: 
-  - "\n<pre><code>NSWebhook thing;\nStringDictionary headers = thing.GetHeaders();</code></pre>\n"
+  - "\n<pre><code>NSWebhook thing;\nMap headers = thing.GetHeaders();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebhook.GetName()
   commentId: M:CRMScript.NetServer.NSWebhook.GetName()
   id: 'GetName()'
@@ -334,10 +334,10 @@ items:
   summary: "\nCustom HTTP Headers to add to webhook requests.\n"
   remarks: 
   syntax: 
-    content: Void SetHeaders(StringDictionary headers)
+    content: Void SetHeaders(Map headers)
     parameters:
   example: 
-  - "\n<pre><code>NSWebhook thing;\nStringDictionary headers;\nthing.SetHeaders(headers);</code></pre>\n"
+  - "\n<pre><code>NSWebhook thing;\nMap headers;\nthing.SetHeaders(headers);</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebhook.SetName(String)
   commentId: M:CRMScript.NetServer.NSWebhook.SetName(String)
   id: 'SetName(String)'
@@ -570,12 +570,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.Global.StringDictionary
-  commentId: T:CRMScript.Global.StringDictionary
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
   isExternal: true
-  name: StringDictionary
-  nameWithType: StringDictionary
-  fullName: CRMScript.Global.StringDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
